# clipstash

./: .dockerignore  .env  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/frontend/: Cargo.toml
crates/frontend/src/: templates.rs
crates/frontend/templates/: article.html  base.html  confirm_clip.html  error.html  index.html  login.html
crates/server/: Cargo.toml
crates/server/src/: auth.rs  db.rs  extractor.rs  lib.rs  main.rs  pages.rs  routes.rs  suggest_tags.rs
crates/server/tests/: auth_tests.rs  db_tests.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  models.rs
docs/superpowers/plans/: 2026-05-15-extension-auto-tags.md
docs/superpowers/specs/: 2026-05-15-extension-auto-tags-design.md
extension/: background.js  manifest.json  options.html  options.js
migrations/: 001_initial.sql
static/: index.html  style.css
